# Testing

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
idk/: __init__.py  dataset.py  features.py  plots.py
idk/modeling/: predict.py  train.py
